--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="css/1.css">
 </head>
 <body>
+	<a href="index.html">Home</a>
+	<a href="gallery.html">Gallery</a>
 	<h1>Rexl <br>
 	<img src="img/1.jpg" alt="">
 	</h1>
