--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="css/1.css">
 </head>
 <body>
+	<div class="menu">
+		<a href="index.html">Home</a>
+		<a href="gallery.html">Gallery</a>
+	</div>
 	<h2>Đây là trang gallery trưng bày sản phẩm của tôi</h2>
 </body>
 </html>
