--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="css/1.css">
 </head>
 <body>
-	<a href="index.html">Home</a>
-	<a href="gallery.html">Gallery</a>
+	<div class="menu">
+		<a href="index.html">Home</a>
+		<a href="gallery.html">Gallery</a>
+	</div>
+	
 	<h1>Rexl <br>
 	<img src="img/1.jpg" alt="">
 	</h1>
